--- a/src/templates/model_basic.html
+++ b/src/templates/model_basic.html
@@ -68,7 +68,7 @@
                  <tr><td><label for = "UTR3length">3 Prime UTR Length :</label></td>
                   <td>
                     <span>
-                      <input  class="form-control" onchange="validate_range(this, 2);" type= "number" min="0.00" max="8154.00" step="any" name="UTR3length" placeholder="Value range: 0.00 - 8154.00" required="required" />
+                      <input  class="form-control" onchange="validate_range(this, 2);" type= "number"   step="any" name="UTR3length" placeholder="Value range: 0.00 - 8154.00" required="required" />
                     </span>
                 </td></tr>
         </div>
@@ -78,7 +78,7 @@
         <div class="col-sm-10">
           <tr><td><label for = "isoforms">Isoforms Count :</label></td>
             <td>
-          <span><input onchange="validate_range(this, 2);" class="form-control" type="number" name="isoforms" max="26.00" min="1.00" step="any" placeholder="Value range: 1.00 - 26.00" required="required" /></span>
+          <span><input onchange="validate_range(this, 2);" class="form-control" type="number" name="isoforms"   step="any" placeholder="Value range: 1.00 - 26.00" required="required" /></span>
           </td></tr>
         </div>
       </div>
@@ -89,7 +89,7 @@
           <tr><td><label for = "UTR5length">5 prime UTR length:</label></td>
             <td>
           <span>
-          <input onchange="validate_range(this, 2);" class="form-control" type="number" name="UTR5length" min="0.00" max="4011.00" step="any" placeholder="Value range: 0.00 - 4011.00" required="required" />
+          <input onchange="validate_range(this, 2);" class="form-control" type="number" name="UTR5length"   step="any" placeholder="Value range: 0.00 - 4011.00" required="required" />
         </span>
       </td></tr>
         </div>
@@ -100,7 +100,7 @@
         <tr><td><label for = "distance">Chromosomal distance:</label></td>
           <td>
           <span>
-          <input onchange="validate_range(this, 2);" class="form-control" type="number" name="distance" min="-154163712.00" max="154114400.00" step="any" placeholder="Value range: -154163712.00 - 154114400.00" required="required" />
+          <input onchange="validate_range(this, 2);" class="form-control" type="number" name="distance"  step="any" placeholder="Value range: -154163712.00 - 154114400.00" required="required" />
           </span>
         </td></tr>
         </div>
@@ -111,7 +111,7 @@
           <tr><td><label for = "CTDD_prop7_G3_residue0">CTDD prop7 G3 residue0 :</label></td>
           <td>
           <span>
-          <input  onchange="validate_range(this, 3);" class="form-control" type="number" name="CTDD_prop7_G3_residue0" min="0.018" max="24.41" step="any" placeholder="Value range: 0.018 - 24.41" required="required" value="{{CTDD_prop7_G3_residue0}}" />
+          <input  onchange="validate_range(this, 3);" class="form-control" type="number" name="CTDD_prop7_G3_residue0"   step="any" placeholder="Value range: 0.018 - 24.41" required="required" value="{{CTDD_prop7_G3_residue0}}" />
           </span>
         </td></tr>
         </div>
@@ -122,7 +122,7 @@
           <tr><td><label for = "PseDNC_Xc1_AT">PseDNC Xc1 AT :</label></td>
             <td>
           <span>
-          <input  onchange="validate_range(this, 3);" class="form-control" type="number" name="PseDNC_Xc1_AT" min="0.00" max="0.117" step="any" placeholder="Value range: 0.00 - 0.117" required="required" value="{{PseDNC_Xc1_AT}}" />
+          <input  onchange="validate_range(this, 3);" class="form-control" type="number" name="PseDNC_Xc1_AT"   step="any" placeholder="Value range: 0.00 - 0.117" required="required" value="{{PseDNC_Xc1_AT}}" />
           </span>
         </td></tr>
         </div>
@@ -133,7 +133,7 @@
           <tr><td><label for = "CTDD_prop1_G2_residue0">CTDD prop1 G2 residue0 :</label></td>
             <td>
           <span>
-          <input onchange="validate_range(this, 4);" class="form-control" type="number" name="CTDD_prop1_G2_residue0" min="0.0368" max="29.629" step="any" placeholder="Value range: 0.0368 - 29.629" required="required" value="{{CTDD_prop1_G2_residue0}}" />
+          <input onchange="validate_range(this, 4);" class="form-control" type="number" name="CTDD_prop1_G2_residue0"   step="any" placeholder="Value range: 0.0368 - 29.629" required="required" value="{{CTDD_prop1_G2_residue0}}" />
           </span>
         </td></tr>
         </div>
@@ -144,7 +144,7 @@
           <tr><td><label for = "PseKNC_3_Xc1_ACG">PseKNC 3 Xc1 ACG :</label></td>
           <td>
           <span>
-          <input onchange="validate_range(this, 3);" class="form-control" type="number" name="PseKNC_3_Xc1_ACG" min="0.00" max="0.02" step="any" placeholder="Value range: 0.00 - 0.02" required="required"  value="{{PseKNC_3_Xc1_ACG}}"/>
+          <input onchange="validate_range(this, 3);" class="form-control" type="number" name="PseKNC_3_Xc1_ACG"   step="any" placeholder="Value range: 0.00 - 0.02" required="required"  value="{{PseKNC_3_Xc1_ACG}}"/>
           </span>
         </td></tr>
         </div>
@@ -155,7 +155,7 @@
           <tr><td><label for = "avgExonLength">Average Exon Length :</label></td>
             <td>
           <span>
-          <input onchange="validate_range(this, 2);" class="form-control" type="number" name="avgExonLength" min="0.00" max="6414.00" step="any" placeholder="Value range: 0.00 - 6414.00" required="required" />
+          <input onchange="validate_range(this, 2);" class="form-control" type="number" name="avgExonLength"   step="any" placeholder="Value range: 0.00 - 6414.00" required="required" />
           </span>
         </td></tr>
         </div>
@@ -166,7 +166,7 @@
           <tr><td><label for = "TC_SAL">Tri Codon SAL :</label></td>
             <td>
           <span>
-          <input onchange="validate_range(this, 3);" class="form-control" type="number" name="TC_SAL" placeholder="Value range: 0.00 - 0.022" min="0.00" max="0.022" step="any" size="5" required="required" value="{{TC_SAL}}"/>
+          <input onchange="validate_range(this, 3);" class="form-control" type="number" name="TC_SAL" placeholder="Value range: 0.00 - 0.022"   step="any" size="5" required="required" value="{{TC_SAL}}"/>
           </span>
         </td></tr>
         </div>
@@ -176,7 +176,7 @@
         <div class="col-sm-10">
           <tr><td><label for = "PseDNC_Xc1_GG">PseDNC Xc1 GG :</label></td>
             <td>
-          <span><input onchange="validate_range(this, 3);" min="0.00" max="0.236" step="any" class="form-control" type="number" name="PseDNC_Xc1_GG" placeholder="Value range: 0.00 - 0.236" required="required"  value="{{PseDNC_Xc1_GG}}"/></span>
+          <span><input onchange="validate_range(this, 3);"   step="any" class="form-control" type="number" name="PseDNC_Xc1_GG" placeholder="Value range: 0.00 - 0.236" required="required"  value="{{PseDNC_Xc1_GG}}"/></span>
           </td></tr>
         </div>
       </div>
@@ -187,7 +187,7 @@
           <tr><td><label for = "PseKNC_3_Xc1_TAG">PseKNC 3 Xc1 TAG :</label></td>
             <td>
           <span>
-          <input onchange="validate_range(this, 4);" min="0.00" max="0.009" step="any" class="form-control" type="number" name="PseKNC_3_Xc1_TAG" placeholder="Value range: 0.00 - 0.009" required="required" value="{{PseKNC_3_Xc1_TAG}}" />
+          <input onchange="validate_range(this, 4);"   step="any" class="form-control" type="number" name="PseKNC_3_Xc1_TAG" placeholder="Value range: 0.00 - 0.009" required="required" value="{{PseKNC_3_Xc1_TAG}}" />
         </span>
       </td></tr>
         </div>
@@ -198,7 +198,7 @@
         <tr><td><label for = "CTDD_prop5_G2_residue0">CTDD prop5 G2 residue0 :</label></td>
           <td>
           <span>
-          <input onchange="validate_range(this, 4);" class="form-control" type="number" name="CTDD_prop5_G2_residue0" min="0.0184" max="3.636" step="any" placeholder="Value range: 0.0184 - 3.636" required="required" value="{{CTDD_prop5_G2_residue0}}"/>
+          <input onchange="validate_range(this, 4);" class="form-control" type="number" name="CTDD_prop5_G2_residue0"   step="any" placeholder="Value range: 0.0184 - 3.636" required="required" value="{{CTDD_prop5_G2_residue0}}"/>
           </span>
         </td></tr>
         </div>
@@ -209,7 +209,7 @@
           <tr><td><label for = "TC_PAP">Tri Codon PAP:</label></td>
           <td>
           <span>
-          <input onchange="validate_range(this, 4);" class="form-control" type="number" name="TC_PAP" placeholder="Value range: 0.00 - 0.0735" min="0.00" max="0.0735" step="any" required="required" value="{{TC_PAP}}" />
+          <input onchange="validate_range(this, 4);" class="form-control" type="number" name="TC_PAP" placeholder="Value range: 0.00 - 0.0735"   step="any" required="required" value="{{TC_PAP}}" />
           </span>
         </td></tr>
         </div>
@@ -220,7 +220,7 @@
           <tr><td><label for = "mRNAlength">Canonical mRNA Length :</label></td>
             <td>
           <span>
-          <input onchange="validate_range(this, 2);" class="form-control" type="number" name="mRNAlength" min="213.00" max="299070.00" step="any" placeholder="Value range: 213.00 - 299070.00" required="required" />
+          <input onchange="validate_range(this, 2);" class="form-control" type="number" name="mRNAlength"   step="any" placeholder="Value range: 213.00 - 299070.00" required="required" />
           </span>
         </td></tr>
         </div>
@@ -231,7 +231,7 @@
           <tr><td><label for = "CTDD_prop2_G3_residue0">CTDD prop2 G3 residue0 :</label></td>
             <td>
           <span>
-          <input onchange="validate_range(this, 4);" class="form-control" type="number" name="CTDD_prop2_G3_residue0" min="0.0184" max="30.00" step="any" placeholder="Value range: 0.0184 - 30.00" required="required" value="{{CTDD_prop2_G3_residue0}}" />
+          <input onchange="validate_range(this, 4);" class="form-control" type="number" name="CTDD_prop2_G3_residue0"   step="any" placeholder="Value range: 0.0184 - 30.00" required="required" value="{{CTDD_prop2_G3_residue0}}" />
           </span>
         </td></tr>
         </div>
@@ -242,7 +242,7 @@
           <tr><td><label for = "TC_LPL">Tri Codon LPL :</label></td>
           <td>
           <span>
-          <input onchange="validate_range(this, 4);" min="0.00" max="0.0328" step="any" class="form-control" type="number" name="TC_LPL" placeholder="Value range: 0.00 - 0.0328" required="required" value="{{TC_LPL}}"/>
+          <input onchange="validate_range(this, 4);"   step="any" class="form-control" type="number" name="TC_LPL" placeholder="Value range: 0.00 - 0.0328" required="required" value="{{TC_LPL}}"/>
           </span>
         </td></tr>
         </div>
@@ -253,7 +253,7 @@
           <tr><td><label for = "TC_RSA">Tri Codon RSA :</label></td>
             <td>
           <span>
-          <input onchange="validate_range(this, 3);" min="0.00" max="0.038" step="any" class="form-control" type="number" name="TC_RSA" placeholder="Value range: 0.00 - 0.038" required="required" value="{{TC_RSA}}"/>
+          <input onchange="validate_range(this, 3);"   step="any" class="form-control" type="number" name="TC_RSA" placeholder="Value range: 0.00 - 0.038" required="required" value="{{TC_RSA}}"/>
           </span>
         </td></tr>
         </div>
@@ -264,7 +264,7 @@
           <tr><td><label for = "PAAC_Xc1_A">PAAC Xc1 A :</label></td>
             <td>
           <span>
-          <input onchange="validate_range(this, 4);" min="0.00" max="0.0425" step="any" class="form-control" type="number" name="PAAC_Xc1_A" placeholder="Value range: 0.00 - 0.0425" size="5" required="required" value="{{PAAC_Xc1_A}}"/>
+          <input onchange="validate_range(this, 4);"   step="any" class="form-control" type="number" name="PAAC_Xc1_A" placeholder="Value range: 0.00 - 0.0425" size="5" required="required" value="{{PAAC_Xc1_A}}"/>
           </span>
         </td></tr>
         </div>
@@ -274,7 +274,7 @@
           <tr><td><label for = "CTriad_VS111">CTriad VS111 :</label></td>
             <td>
           <span>
-          <input onchange="validate_range(this, 2);" class="form-control" type="number" name="CTriad_VS111" min="0.00" max="1.00" step="any" placeholder="Value range: 0.00 - 1.00" required="required" value="{{CTriad_VS111}}"/>
+          <input onchange="validate_range(this, 2);" class="form-control" type="number" name="CTriad_VS111"   step="any" placeholder="Value range: 0.00 - 1.00" required="required" value="{{CTriad_VS111}}"/>
           </span>
         </td></tr>
         </div>
@@ -285,7 +285,7 @@
           <tr><td><label for = "CTDD_prop7_G1_residue0">CTDD prop7 G1 residue0 :</label></td>
             <td>
           <span>
-          <input onchange="validate_range(this, 4);" min="0.0394" max="21.83" step="any" class="form-control" type="number" name="CTDD_prop7_G1_residue0" placeholder="Value range: 0.0394 - 21.83" required="required" value="{{CTDD_prop7_G1_residue0}}" />
+          <input onchange="validate_range(this, 4);"   step="any" class="form-control" type="number" name="CTDD_prop7_G1_residue0" placeholder="Value range: 0.0394 - 21.83" required="required" value="{{CTDD_prop7_G1_residue0}}" />
           </span>
         </td></tr>
         </div>
@@ -296,7 +296,7 @@
           <tr><td><label for = "PAAC_Xc1_P">PAAC Xc1 P :</label></td>
           <td>
           <span>
-          <input onchange="validate_range(this, 2);" min="0.00" max="163.68" step="any" class="form-control" type="number" name="PAAC_Xc1_P" placeholder="Value range: 0.00 - 163.68" required="required" value="{{PAAC_Xc1_P}}" />
+          <input onchange="validate_range(this, 2);"   step="any" class="form-control" type="number" name="PAAC_Xc1_P" placeholder="Value range: 0.00 - 163.68" required="required" value="{{PAAC_Xc1_P}}" />
           </span>
         </td></tr>
         </div>
@@ -307,7 +307,7 @@
           <tr><td><label for = "TC_VVA">Tri Codon VVA :</label></td>
             <td>
           <span>
-          <input  onchange="validate_range(this, 4);" min="0.00" max="0.0307" step="any" class="form-control" type="number" name="TC_VVA" placeholder="Value range: 0.00 - 0.0307" size="5" required="required" value="{{TC_VVA}}"/>
+          <input  onchange="validate_range(this, 4);"   step="any" class="form-control" type="number" name="TC_VVA" placeholder="Value range: 0.00 - 0.0307" size="5" required="required" value="{{TC_VVA}}"/>
           </span>
         </td></tr>
         </div>
@@ -318,7 +318,7 @@
           <tr><td><label for = "PseKNC_3_Xc1_TGT">PseKNC 3 Xc1 TGT :</label></td>
             <td>
           <span>
-          <input onchange="validate_range(this, 3);" min="0.00" max="0.021" step="any" class="form-control" type="number" name="PseKNC_3_Xc1_TGT" placeholder="Value range: 0.00 - 0.021" size="5" required="required"  value="{{PseKNC_3_Xc1_TGT}}"/>
+          <input onchange="validate_range(this, 3);"   step="any" class="form-control" type="number" name="PseKNC_3_Xc1_TGT" placeholder="Value range: 0.00 - 0.021" size="5" required="required"  value="{{PseKNC_3_Xc1_TGT}}"/>
           </span>
         </td></tr>
         </div>
@@ -329,7 +329,7 @@
           <tr><td><label for = "TC_ARG">Tri Codon ARG :</label></td>
             <td>
           <span>
-          <input onchange="validate_range(this, 4);" min="0.00" max="0.0296" step="any" class="form-control" type="number" name="TC_ARG" placeholder="Value range: 0.00 - 0.0296" size="5" required="required" value="{{TC_ARG}}"/>
+          <input onchange="validate_range(this, 4);"   step="any" class="form-control" type="number" name="TC_ARG" placeholder="Value range: 0.00 - 0.0296" size="5" required="required" value="{{TC_ARG}}"/>
           </span>
         </td></tr>
         </div>
